fix: fix bug in for the validation.