@@ -13,27 +13,33 @@ import mg.noobframework.utils.StringUtils;
 public class Validation {
     public static boolean checkValidation(Field field, String paramValue, HttpServletRequest request,
             HashMap<String, String> error) throws Exception {
-        if (paramValue == null || paramValue.isEmpty() || paramValue.isBlank()) {
-            if (field.isAnnotationPresent(Required.class)) {
+        // Vérifier d'abord si le champ est requis
+        boolean isRequired = field.isAnnotationPresent(Required.class);
+
+        if ((paramValue == null || paramValue.trim().isEmpty() || paramValue.isBlank())) {
+            if (isRequired) {
                 error.put(field.getName(), "value required");
                 return false;
             }
-        } else {
-            if (field.isAnnotationPresent(Numerique.class)) {
-                if (!StringUtils.isNumeric(paramValue)) {
-                    error.put(field.getName(), "value must be numeric");
-                    return false;
-                }
-            } else if (field.isAnnotationPresent(Date.class)) {
-                if (!StringUtils.isDate(paramValue)) {
-                    error.put(field.getName(), "value must be date");
-                    return false;
-                }
-            } else if (field.isAnnotationPresent(Email.class)) {
-                if (!StringUtils.isEmail(paramValue)) {
-                    error.put(field.getName(), "value must be email");
-                    return false;
-                }
+            // Si le champ n'est pas requis et est vide, on retourne true
+            return !isRequired; 
+        }
+
+        // Validation des autres contraintes si la valeur n'est pas vide
+        if (field.isAnnotationPresent(Numerique.class)) {
+            if (!StringUtils.isNumeric(paramValue)) {
+                error.put(field.getName(), "value must be numeric");
+                return false;
+            }
+        } else if (field.isAnnotationPresent(Date.class)) {
+            if (!StringUtils.isDate(paramValue)) {
+                error.put(field.getName(), "value must be date");
+                return false;
+            }
+        } else if (field.isAnnotationPresent(Email.class)) {
+            if (!StringUtils.isEmail(paramValue)) {
+                error.put(field.getName(), "value must be email");
+                return false;
             }
         }
         return true;
